Fixes #109 for good. Added a different kind of page-class to body. Confirmed on IE6

--- a/sites/all/themes/dev/warmshowers_zen/css/pages/profile.css
+++ b/sites/all/themes/dev/warmshowers_zen/css/pages/profile.css
@@ -114,8 +114,11 @@ body.sidebar-second.section-users #content .section {
   margin:0px;
 }
 
-body.sidebar-second.section-users #content {
+body.section-users #content {
   background-color: #304767;
+}
+body.spg-contact #content {
+  background-color: #fff;
 }
 
 body.section-users #content .content{
