--- a/sites/all/themes/dev/warmshowers_zen/css/z_misc/ie6.css
+++ b/sites/all/themes/dev/warmshowers_zen/css/z_misc/ie6.css
@@ -108,3 +108,7 @@ div.error /* High priority messages. See also the .error declaration below. */ {
 #navigation {
   width: 100%;
 }
+body.sidebar-second #content .section {
+  background-color: #FFF;
+  border: 10px solid red;
+}
